<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>uk.co.odinconsultants.victor</groupId>
    <artifactId>AzurePlayground</artifactId>
    <version>0.1</version>
    <name>${project.artifactId}</name>
    <description>Playing around with MS Azure's APIs</description>
    <inceptionYear>2024</inceptionYear>
    <url>https://github.com/PhillHenry/AzurePlayground</url>
    <licenses>
        <license>
            <name>Apache License Version 2.0</name>
            <url>http://www.apache.org/licenses/</url>
        </license>
    </licenses>
    <scm>
        <url>https://github.com/PhillHenry/AzurePlayground.git</url>
    </scm>
    <developers>
        <developer>
            <name>Phillip Henry</name>
        </developer>
    </developers>
    <packaging>jar</packaging>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <encoding>UTF-8</encoding>
        <slf4j.version>1.7.25</slf4j.version>
    </properties>

    <dependencies>
	    <dependency>
            <groupId>com.azure.resourcemanager</groupId>
            <artifactId>azure-resourcemanager-datafactory</artifactId>
            <version>1.0.0-beta.26</version>
        </dependency>
        <dependency>
            <groupId>com.azure.resourcemanager</groupId>
            <artifactId>azure-resourcemanager</artifactId>
            <version>2.35.0</version>
        </dependency>
        <dependency>
            <groupId>com.azure.resourcemanager</groupId>
            <artifactId>azure-resourcemanager-mediaservices</artifactId>
            <version>2.3.0</version>
        </dependency>
        <dependency>
            <groupId>com.azure</groupId>
            <artifactId>azure-identity</artifactId>
            <version>1.11.1</version>
        </dependency>
        <dependency>
            <groupId>com.azure</groupId>
            <artifactId>azure-core-http-netty</artifactId>
            <version>1.13.11</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
        </dependency>


    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.azure</groupId>
                <artifactId>azure-core</artifactId>
                <version>1.46.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>java21-target</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.11.0</version>
                        <configuration>
                            <source>${maven.compiler.source}</source>
                            <target>${maven.compiler.target}</target>
                            <compilerArgs>
                                <arg>--add-exports=java.base/sun.net.util=ALL-UNNAMED</arg>
                                <arg>--add-exports=java.management/sun.management=ALL-UNNAMED</arg>
                                <arg>--add-exports=java.rmi/sun.rmi.registry=ALL-UNNAMED</arg>
                                <arg>--add-exports=java.security.jgss/sun.security.krb5=ALL-UNNAMED</arg>
                                <arg>--add-modules=jdk.incubator.vector</arg>
                            </compilerArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
